# Crowling

./: .gitignore  README.md  codebase_summary.md  pyproject.toml  requirements.txt
.agents/rules/: errors.py  project_rules.md
config/: default.yaml
docs/: PRD.md  PRD2.md  PRD_ADDENDUM.md  TECHNICAL_REFERENCE.md  UI_SPEC.md  task.md  task2.md
nact_mvp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: __init__.py  config.py  interfaces.py  main.py
src/collectors/: article_parser.py  comment_collector.py  comment_fetcher.py  comment_parser.py  comment_stats.py  search_collector.py
src/common/: errors.py
src/http/: client.py
src/ops/: evidence.py  health_check.py  logger.py  probe.py  rate_limiter.py  run_events.py  run_metrics.py  structural.py  throttle.py  volume.py  volume_strategy.py
src/privacy/: factory.py  hashing.py
src/storage/: db.py  (+3 more)
tests/: conftest.py  test_article_parser.py  test_cli_foundations.py  test_comment_collector.py  test_comment_fetcher.py  test_comment_stats_service.py  test_common_errors.py  test_config_loader.py  test_ops_evidence.py  test_ops_health.py  test_ops_health_check.py  test_ops_logger.py  test_ops_probe.py  test_ops_run_metrics.py  test_ops_structural.py  test_ops_volume.py  test_privacy_hashing.py  test_rate_limiter.py  test_search_collector.py  test_storage_db.py  test_storage_exporters.py  test_storage_repository.py  test_storage_run_repository.py  test_throttle.py
tools/: create_issues.py
webui/: jest.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
(+10 files in other folders)
